# giddy

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/giddy/: __init__.py  cli.py  config.py  git.py  main.py  ui.py  utils.py  workflows.py
src/giddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_amend.py  test_clean_branch_name.py  test_config.py  test_get_remote_repo_info.py  test_git.py  test_switch_branch.py  test_undo.py  test_untrack.py
