[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "giddy"
version = "0.1.0"
description = "Le wrapper Git qui te garde sur le droit chemin."
requires-python = ">=3.8"
dependencies = [
    "InquirerPy>=0.3.4",
    "rich>=13.0.0",
]

[project.scripts]
giddy = "giddy.main:app"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
